--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-RPC_URL=https://base-mainnet.g.alchemy.com/v2/your-key
+RPC_URL=https://mainnet.base.org
 CHAIN_ID=8453
 
 # Amount thresholds (human units)
@@ -8,6 +8,20 @@ ETH_MIN_SWAP=0.003      # minimum chunk for WETH->USDC
 SLIPPAGE=2
 GAS_INCLUDED=true
 RESET_APPROVAL=false
+
+# Submit via MetaMask Transaction API
+TX_SUBMIT_BASE=https://transaction.api.cx.metamask.io
+STX_CONTROLLER_VERSION=18.1.0
+
+# Debugging (verbose logs for submission/polling)
+# DEBUG=true
+
+# Rewards API (MetaMask Mobile Rewards)
+REWARDS_API_URL=https://rewards.api.cx.metamask.io
+REWARDS_CLIENT_ID=mobile-7.57.0
+# REWARDS_LANGUAGE=id-ID
+# REWARDS_REFERRAL_CODE=
+# REWARDS_SESSIONS_PATH=.rewards-sessions.json
 
 # Quote API base is now hardcoded to https://api-metamask.xto.lol
 
